<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mtrl_card_spacing"
                android:layout_marginTop="@dimen/mtrl_card_spacing"
                android:layout_marginRight="@dimen/mtrl_card_spacing">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/img_item_photo"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="8dp"
                            android:contentDescription="@string/img_describ"
                            android:src="@mipmap/ic_launcher_round" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="10dp"
                            android:layout_toEndOf="@id/img_item_photo"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:text="@string/name"
                                android:textColor="@color/colorWhite"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/date"
                                android:textColor="@color/colorWhite" />
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintDimensionRatio="2:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cardAntrian"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="@color/colorWhite">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/colorBackgroundDark"
                                android:padding="8dp"
                                android:text="@string/antrian"
                                android:textColor="@color/colorWhite"
                                android:textSize="15sp" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/colorPrimary">

                                <TextView
                                    android:id="@+id/tv_antrian"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="16"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="80sp"
                                    android:textStyle="bold"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintVertical_bias="0.6" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cardShorcut"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardBackgroundColor="@color/colorWhite">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvShortcut"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/colorBackgroundDark"
                                android:padding="8dp"
                                android:text="@string/shortcut"
                                android:textColor="@color/colorWhite"
                                android:textSize="18dp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/colorPrimary"
                                android:orientation="vertical">

                                <Button
                                    android:id="@+id/btn_edit"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:backgroundTint="@android:color/holo_orange_dark"
                                    android:drawableLeft="@drawable/ic_edit_black_24dp"
                                    android:padding="10dp"
                                    android:text="Edit Profile"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="12dp" />

                                <Button
                                    android:id="@+id/btn_list"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp"
                                    android:backgroundTint="@android:color/holo_orange_dark"
                                    android:drawableLeft="@drawable/ic_list_black_24dp"
                                    android:padding="10dp"
                                    android:text="Data Checkup"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="12dp" />

                            </LinearLayout>

                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cartTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorWhite">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackgroundDark"
                        android:padding="8dp"
                        android:text="@string/total"
                        android:textColor="@color/colorWhite"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tv_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="20"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorWhite"
                        android:textSize="50sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cartDaftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/colorWhite">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="Antrian Anda: "
                        android:textColor="@color/colorWhite"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/tv_daftar"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="6dp"
                        android:text="13"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorWhite"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="?attr/colorError"
        android:clickable="true"
        android:text="Daftar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:srcCompat="@drawable/ic_add_circle_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>